--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,23 +14,24 @@
             android:id="@+id/fusing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/fusing_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/jeweller"
+            app:layout_constraintTop_toBottomOf="@+id/jeweller"
             app:srcCompat="@drawable/currency_fusing" />
 
         <ImageView
             android:id="@+id/jeweller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/fusing"
-            app:layout_constraintEnd_toStartOf="@+id/fusing"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/chromatic"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/fusing"
+            app:layout_constraintEnd_toEndOf="@+id/fusing"
+            app:layout_constraintTop_toBottomOf="@+id/chromatic"
             app:srcCompat="@drawable/currency_jeweller"
             android:contentDescription="@string/jeweller_image" />
 
@@ -38,11 +39,11 @@
             android:id="@+id/chromatic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/jeweller"
-            app:layout_constraintEnd_toStartOf="@+id/jeweller"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/jeweller"
+            app:layout_constraintEnd_toEndOf="@+id/jeweller"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/currency_chromatic"
             android:contentDescription="@string/chromatic_image" />
 
@@ -50,22 +51,21 @@
             android:id="@+id/used_sockets"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginStart="16dp"
             android:text=""
-            app:layout_constraintBottom_toTopOf="@+id/jeweller"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/chromatic"
             tools:text="Sockets used: 0" />
 
         <TextView
             android:id="@+id/used_fusings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:text=""
-            app:layout_constraintBottom_toTopOf="@+id/used_sockets"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/used_sockets"
             tools:text="Fusings used: 0" />
 
     </android.support.constraint.ConstraintLayout>
