--- a/app/src/main/res/layout/single_poe_item.xml
+++ b/app/src/main/res/layout/single_poe_item.xml
@@ -13,12 +13,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/item_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/armour_vaalregalia" />
 
     <GridLayout
