--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#334455</color>
     <color name="colorPrimaryDark">#345678</color>
     <color name="colorAccent">#999999</color>
+    <color name="background">#cccccc</color>
 </resources>
