--- a/app/src/main/res/layout/single_poe_item.xml
+++ b/app/src/main/res/layout/single_poe_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/item_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:parentTag="android.support.constraint.ConstraintLayout">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
         android:id="@+id/vaal_regalia"
